# liblog

./: .gitignore  Makefile.am  README  configure.ac  libsimplelog.pc.in
debian/: changelog  control
include/: Makefile.am  liblog.h  liblog_level.h  libsimplelog.h  log.h  loglevel.h
src/: Makefile.am  liblog.c  libsimplelog.c
test/: Makefile.am  test.c
